--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "react-with-firebase-auth": "^1.3.2",
     "reactfire": "^2.0.3"
   },
